# XFileManager

./: .gitignore  CMakeLists.txt  README.md
headers/: Components.h  Core.h  FMMainWindow.h  FileManagerApp.h  UMainWindow.h
headers/Components/: CExplorer.h  CInputLine.h  CMainMenuBar.h  COverview.h
headers/Components/CExplorer/: CContextMenu.h  ExploreThread.h  SearchThread.h
headers/Func/: AFileExplore.h  AFileExplorer.h  ASmartFind.h  ASmartSearch.h
sources/: FMMainWindow.cpp  FileManagerApp.cpp  UMainWindow.cpp  main.cpp
sources/Components/: CExplorer.cpp  CExplorerItem.cpp  CInputLine.cpp  CMainMenuBar.cpp  COverview.cpp  COveviewItem.cpp
sources/Components/CExplorer/: CContextMenu.cpp  ExploreThread.cpp  SearchThread.cpp
sources/Func/: AFileExplore.cpp  AFileExplorer.cpp  ASmartFind.cpp  ASmartSearch.cpp
